MENU AND DASHBOARD CARDS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,14 @@
 .carousel-item {
   height: 100% !important;
 }
+
+.mat-expansion-panel-body{
+  padding:0px!important;
+  }
+
+  .mat-expansion-panel-spacing{
+margin:  0px!important;
+  }
+  .mat-expansion-panel{
+background-color:transparent;
+  }
